Resolve JDKs as artifacts
* Caching: Gradle will cache downloaded JDKs so that they can be reused across different modules.

* Integrity checks: Can be done through the standard means of Dependency Verification (https://docs.gradle.org/current/userguide/dependency_verification.html).

* Security: One may utilize any authentication mechanism supported by Gradle (https://docs.gradle.org/current/userguide/declaring_repositories.html#sec:authentication_schemes).

* UX: Download progress, retrying, etc. are all handled by Gradle.